[package]
name = "mangate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures-util = "0.3.29"
http-body-util = "0.1"
# hyper = { version = "1", features = ["full"] }
memcache = { version = "0.17.1", default-features = false }
pin-project-lite = "0.2.13"
pretty_env_logger = "0.5.0"
surf = { version = "2.3.2", features = ["async-native-tls", "hyper-client"], default-features = false }
# tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "sync", "macros"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
# tokio-util = {version = "0.7.10", features = ["io"]}
hyper-util = { version = "0.1", features = ["full"] }

